img square più piccola

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       <!-- prima sezione corpo centrale -->
       <section class="first-body">
         <div class="img-square">
-          <img class="square" src="img/Integrations_Illustration_2x.png" alt="integration">
+          <div class="first-d">
+            <img class="square" src="img/Integrations_Illustration_2x.png" alt="integration">
+          </div>
           <h2>Powerfull alone. Better togheter</h2>
           <p>Hubspot offers a full stack of software for marketing, sales and costumercostumer service, with a completelyfree CRM at its <br>
           core. They're powerfull alone-but even betterwhen used togheter.</p>
